feat: add POC in memory for ws and tests
