# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.LoginDTO"
+                            "$ref": "#/definitions/http.LoginDTO"
                         }
                     }
                 ],
@@ -104,7 +104,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.SendCodeDTO"
+                            "$ref": "#/definitions/http.SendCodeDTO"
                         }
                     }
                 ],
@@ -160,6 +160,55 @@
                 }
             }
         },
+        "/conversations": {
+            "get": {
+                "description": "Get list of conversations",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "Get list of conversations",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Conversation"
+                        }
+                    }
+                }
+            }
+        },
+        "/message/{conversationId}": {
+            "get": {
+                "description": "Get conversation message",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "Get conversation message",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Message"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "post": {
                 "description": "Create a new user",
@@ -180,7 +229,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UserToCreate"
+                            "$ref": "#/definitions/http.UserToCreate"
                         }
                     }
                 ],
@@ -233,12 +282,6 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.UserWithId"
-                        }
-                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -274,7 +317,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.UserWithId"
+                            "$ref": "#/definitions/entity.User"
                         }
                     },
                     "400": {
@@ -315,7 +358,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.ContactsToSync"
+                            "$ref": "#/definitions/http.ContactsToSync"
                         }
                     }
                 ],
@@ -368,12 +411,6 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.UserWithId"
-                        }
-                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -410,7 +447,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UserToUpdate"
+                            "$ref": "#/definitions/http.UserToUpdate"
                         }
                     },
                     {
@@ -504,7 +541,45 @@
         }
     },
     "definitions": {
-        "auth.LoginDTO": {
+        "entity.User": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "isVerified": {
+                    "type": "boolean"
+                },
+                "phoneNumber": {
+                    "type": "string"
+                },
+                "userName": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.ContactsToSync": {
+            "type": "object",
+            "required": [
+                "ownerId",
+                "phoneNumbers"
+            ],
+            "properties": {
+                "ownerId": {
+                    "type": "string"
+                },
+                "phoneNumbers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "http.LoginDTO": {
             "type": "object",
             "required": [
                 "code",
@@ -519,7 +594,7 @@
                 }
             }
         },
-        "auth.SendCodeDTO": {
+        "http.SendCodeDTO": {
             "type": "object",
             "required": [
                 "phoneNumber"
@@ -530,54 +605,80 @@
                 }
             }
         },
-        "model.UserWithId": {
+        "http.UserToCreate": {
             "type": "object",
+            "required": [
+                "phoneNumber"
+            ],
             "properties": {
-                "id": {
+                "phoneNumber": {
                     "type": "string"
                 }
             }
         },
-        "user.ContactsToSync": {
+        "http.UserToUpdate": {
             "type": "object",
             "required": [
-                "contactIds",
-                "ownerId"
+                "phoneNumber",
+                "userName"
             ],
             "properties": {
-                "contactIds": {
+                "phoneNumber": {
+                    "type": "string"
+                },
+                "userName": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Conversation": {
+            "type": "object",
+            "properties": {
+                "deleted_by": {
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
                 },
-                "ownerId": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.UserToCreate": {
-            "type": "object",
-            "required": [
-                "phoneNumber"
-            ],
-            "properties": {
-                "phoneNumber": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.UserToUpdate": {
-            "type": "object",
-            "required": [
-                "name",
-                "phoneNumber"
-            ],
-            "properties": {
-                "name": {
+                "id": {
                     "type": "string"
                 },
-                "phoneNumber": {
+                "last_msg": {
+                    "$ref": "#/definitions/model.Message"
+                },
+                "user_id": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "model.Message": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "conversationId": {
+                    "type": "string"
+                },
+                "deleted_by": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "read": {
+                    "type": "boolean"
+                },
+                "senderId": {
+                    "type": "string"
+                },
+                "sentAt": {
                     "type": "string"
                 }
             }
